2011-02-01  Ben Abbott  <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Don't throw an error if gnuplot
	isn't installed.

2011-02-01  John W. Eaton  <jwe@octave.org>

	* plot/scatter3.m: Pass h to set, not ax.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* plot/private/__axis_label__.m: Don't call __fltk_redraw__.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* plot/__fltk_ginput__.m: Remove line that should have been
	removed in previous change.

2010-01-31  Rik  <octave@nomad.inbox5.com>

	* plot/private/__gnuplot_has_terminal__.m: Simplify regular expression
	to eliminate word-boundary assertion.

2010-01-30  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, optimization/module.mk: Deprecate glpkmex
	function.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* plot/__gnuplot_drawnow__.m: Rename from gnuplot_drawnow.m
	Update doc string and error message with new name.
	* plot/module.mk (plot_FCN_FILES): Update list.

2011-01-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot/__fltk_ginput__.m (ginput_aggregator): New arg, button.
	Change all uses.
	(ginput_keypressfcn): Save keypress info.

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* plot/gnuplot_binary.in: Improve docstring

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* general/accumarray.m: Add seealso reference to accumdim.

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* set/powerset.m: Improve docstring.

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/copyfile.m, miscellaneous/movefile.m,
	miscellaneous/tempname.m: Improve docstrings

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, image/module.mk: Deprecate saveimage.m.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* optimization/glpkmex.m: Add seealso reference to glpk.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/compare_versions.m: Allow only "==" equality operator.
	Add input validation tests.  Improve docstring.

	* miscellaneous/ver.m, miscellaneous/version.m, path/matlabroot.m: